--- a/src/frontend/pages/index.njk
+++ b/src/frontend/pages/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: base.template.njk
-title: Welcome repo-quality
+title: Welcome to the talks of NG Poland,JS Poland and AI Poland
 navigation: false
 footer: true
 ---
